--- a/full-projects-iii-team-1/Front/html/bot-1957.html
+++ b/full-projects-iii-team-1/Front/html/bot-1957.html
@@ -92,18 +92,18 @@
                            message = resp.message;
                        if(user.audio === "audioEnabled"){
                         if(message.message == "The Quarrymen Is a band that I started In high school with some friends last year. Later I met Paul and he joined the band. After that Paul Introduced me to George and George joined the band. It Is going pretty good right now, we got a performance next week!"){
-                           addVideo("https://beatles-experience.herokuapp.com/videos/1957/John_TheQuarrymen.mp4");
+                           addVideo("../videos/1957/John_TheQuarrymen.mp4");
                         
                        }else if (message.message == "Well I'm 15 years and from Liverpool and I am In a band with some friends called The Quarryman. I go to Quarry Bank High School  and I love writing music and playing the guitar. Right now our band Is playing In local venues and churches." ){
-                       addVideo("https://beatles-experience.herokuapp.com/videos/1957/John_Who.mp4");
+                       addVideo("../videos/1957/John_Who.mp4");
                        }else if (message.message == "I met Paul at St. Peter's, Woolton's Parish Church in Liverpool. I was playin with The Quarrymen there and Paul was then introduced by a mutual friend of us. There Paul showed me some handy guitar tuning techniques and after that we stayed in touch and talked about him joining the band. And he did!" ){
-                           addVideo("https://beatles-experience.herokuapp.com/videos/1957/JohnPaul_Meet.mp4");
+                           addVideo("../videos/1957/JohnPaul_Meet.mp4");
                        }else if (message.message == "Paul Is a friend of mine and the bassist, writer and co-vocalist of my band. He Is around the same age as me. And as for writing songs, he got a couple of good Idea's." ){
-                           addVideo("https://beatles-experience.herokuapp.com/videos/1957/JohnPaul_Who.mp4");
+                           addVideo("../videos/1957/JohnPaul_Who.mp4");
                        }else if (message.message == "Well, George Is a 14 year old talented guitar player. Paul recommended him to join the band and George aswell wanted to join. But I had my doubts because he Is just simply too young. But after some thought and seeing his guitar skills eventually I agreed." ){
-                           addVideo("https://beatles-experience.herokuapp.com/videos/1957/John_George.mp4");
+                           addVideo("../videos/1957/John_George.mp4");
                        }else if (message.message == "Beetles? I don't see any beetles here man!" ){
-                           addVideo("https://beatles-experience.herokuapp.com/videos/1957/John_Beatles.mp4");
+                           addVideo("../videos/1957/John_Beatles.mp4");
                        }
                       }
                     }
