--- a/full-projects-iii-team-1/Front/html/bot-1960.html
+++ b/full-projects-iii-team-1/Front/html/bot-1960.html
@@ -88,16 +88,16 @@
                             message = resp.message;
                         if(user.audio === "audioEnabled"){
                         if(message.message == `Our friend Stuart came up with the name "The Beatals", but then we didn't like it as much and after some time we decided to call it "The Beatles". It is a play of words of Beat and Beetles.`){
-                            addVideo("https://beatles-experience.herokuapp.com/videos/1960/Paul_Beatles.mp4");
+                            addVideo("../videos/1960/Paul_Beatles.mp4");
                          
                         }else if (message.message == "So we started with our good ol chap Tommy (Moore) but he lost some of his front teeth during a bus drive while touring. Aside of that he also didn't get along with Lennon. Then after Tommy we got Norman (Chapman), he was quite the chap alright but he had to leave for his country. Then Pete joins but he wasn't really that good, no offense Pete! But we got Ringo now, he is pretty great, maybe he will stick around." ){
-                        addVideo("https://beatles-experience.herokuapp.com/videos/1960/Paul_Drummer.mp4");
+                        addVideo("../videos/1960/Paul_Drummer.mp4");
 
                         }else if (message.message == "Yeah chap! It was quite the ride innit but unfortunately we had some trouble with the law over there. Well Georgy boy got send back to the UK because he was too young to travel , and we got send back because we were playing with fire(Arson). The folks over there sure didn't like that, well I can't blame them!" ){
-                            addVideo("https://beatles-experience.herokuapp.com/videos/1960/Paul_Hamburg.mp4");
+                            addVideo("../videos/1960/Paul_Hamburg.mp4");
 
                         }else if (message.message == "Well, I'm Paul , I'm 18 years old and I'm in the band called The Beatles. where I play the bass and write songs. I love music, I love writing it and of course I love playing my instruments." ){
-                            addVideo("https://beatles-experience.herokuapp.com/videos/1960/Paul_Who.mp4");
+                            addVideo("../videos/1960/Paul_Who.mp4");
                         }
                         }
                         }
