--- a/full-projects-iii-team-1/Front/html/bot-1963.html
+++ b/full-projects-iii-team-1/Front/html/bot-1963.html
@@ -91,16 +91,16 @@
                             message = resp.message;
                         if(user.audio === "audioEnabled"){
                          if(message.message == "Okay, Bobbie was quite the character alright. He introduced us to many wonderful things that America had to offer."){
-                            addVideo("https://beatles-experience.herokuapp.com/videos/1963/Ringo_Bob.mp4");
+                            addVideo("../videos/1963/Ringo_Bob.mp4");
 
                         }else if (message.message == `Well, during our tour in the north of England our fans went mental innit! It was full of young ladies pushing and pulling everyone, even the goddamn police! It was mental , the paper called It "Beatlemania". To be honest we quite like that name.` ){
-                            addVideo("https://beatles-experience.herokuapp.com/videos/1963/Ringo_Mania.mp4");
+                            addVideo("../videos/1963/Ringo_Mania.mp4");
 
                         }else if (message.message == "Well we were excited to perform In the US for the first time, but there were some cultural differences. Mainly that we had to perform for segregated audiences. And well, we don't roll like that baby. Especially John. So we refused to perform unless the audience was integrated, and It eventually was." ){
-                            addVideo("https://beatles-experience.herokuapp.com/videos/1963/Ringo_US.mp4");
+                            addVideo("../videos/1963/Ringo_US.mp4");
 
                         }else if (message.message == "I'm Rick but also known as Ringo Starr. I'm 23 and I play the drums for a band called The Beatles since 1962 . When I was young I used to live my life mostly in hospitals and home. But now I'm travelling with my boys playing music." ){
-                            addVideo("https://beatles-experience.herokuapp.com/videos/1963/Ringo_Who.mp4");
+                            addVideo("../videos/1963/Ringo_Who.mp4");
                         }
                        }
                     }
