--- a/full-projects-iii-team-1/Front/html/bot-1965.html
+++ b/full-projects-iii-team-1/Front/html/bot-1965.html
@@ -88,16 +88,16 @@
                             message = resp.message;
                          if(user.audio === "audioEnabled"){
                          if(message.message == "I had the impression Asia didn't like us. We were threatened In the Philippines and In Japan we were treated as prisoners. That aside It's always fun to perform in new places."){
-                            addVideo("https://beatles-experience.herokuapp.com/videos/1965/George_Asia.mp4");
+                            addVideo("../videos/1965/George_Asia.mp4");
                          
                         }else if (message.message == "Well, not to brag or something but simply because the crowd was too loud. So loud that you couldn't hear the music. Well then what's the point of a live show If you can't hear the music lad." ){
-                        addVideo("https://beatles-experience.herokuapp.com/videos/1965/George_Live.mp4");
+                        addVideo("../videos/1965/George_Live.mp4");
 
                         }else if (message.message == "We declined a offer to eat breakfast with the president's wife of the Philippines. Actually our manager did. You see it's our and our managers policy to decline such kind of requests. So we did the same with the Philippines. Politely of course but they didn't take it that way. It resulted by that the whole country hated us. Kind of rude If you ask me." ){
-                            addVideo("https://beatles-experience.herokuapp.com/videos/1965/George_Philipines.mp4");
+                            addVideo("../videos/1965/George_Philipines.mp4");
 
                         }else if (message.message == "Well I'm George , Im 22 and I'm the youngest of the band. I play the lead guitar and It's fun. It was quite a hassle to join the band because of John but thanks to Paul I eventually joined." ){
-                            addVideo("https://beatles-experience.herokuapp.com/videos/1965/George_Who.mp4");
+                            addVideo("../videos/1965/George_Who.mp4");
                         }
                        }
                     }
