--- a/full-projects-iii-team-1/Front/html/bot-1969.html
+++ b/full-projects-iii-team-1/Front/html/bot-1969.html
@@ -88,16 +88,16 @@
                             message = resp.message;
                          if(user.audio === "audioEnabled"){
                          if(message.message == `Well, It has been a fun ride and after the failure of our "Get Back" project It got me thinking man. I am considering to leave but right now we are putting our differences aside and trying to give It a another shot with "Abbey Road".`){
-                            addVideo("https://beatles-experience.herokuapp.com/videos/1969/John69_Future.mp4");
+                            addVideo("../videos/1969/John69_Future.mp4");
                          
                         }else if (message.message == "To be honest It ain't what it used to be man. After Epstein (manager) died Paul started acting a little bit snobby. Also I started spending more time with my new wife Yoko.  She has a great influence on my music but the gang don't feel the same about It. So It's not Ideal right now." ){
-                        addVideo("https://beatles-experience.herokuapp.com/videos/1969/John69_Group.mp4");
+                        addVideo("../videos/1969/John69_Group.mp4");
 
                         }else if (message.message == "I'm doing good man but the world Isn't. Got me a beautiful wife that I'm starting a band with. We already released three albums which address the Vietnam war. Speaking of the war, I recently found out that the Queen is supporting the war so I gave back my MBE ( The Most Excellent Order of the British Empire) medal with the hopes of renouncing the title too. But unfortunately that Is not possible man." ){
-                            addVideo("https://beatles-experience.herokuapp.com/videos/1969/John69_How.mp4");
+                            addVideo("../videos/1969/John69_How.mp4");
 
                         }else if (message.message == `Now, we went to India to follow a three-month meditation "Guide Course".  But Ringo left after 10 days, unable to stomach the food. Paul left because he simply got bored of the meditation. Then me and George were the only ones that stayed because we enjoyed our time there. But we left too because our Maharishi( sort of priest) was making sexual advances to the women attendees. Me and George got pissed and left. I even wrote a song about the dirty bastard.` ){
-                            addVideo("https://beatles-experience.herokuapp.com/videos/1969/John69_India.mp4");
+                            addVideo("../videos/1969/John69_India.mp4");
                         }
                        }
                     }
