--- a/full-projects-iii-team-1/Front/html/video.html
+++ b/full-projects-iii-team-1/Front/html/video.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <video id="myVideo" src="../videos/CreditsBeatles (1).mp4" controls autoplay></video>
+    <video id="myVideo" src="../videos/CreditsBeatles.mp4" controls autoplay></video>
 
     <main >
 
